@@ -1,3 +1,8 @@
+2020-08-12         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.c, command.c: Regenerated with Bison 3.7.1.
+	* NEWS: Updated.
+
 2020-07-29         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* custom.h (FLEXIBLE_ARRAY_MEMBER): Define to 1 for dfa.h.
